added functional tests for offers controller
fixed bugs arising from running the tests

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -5,7 +5,9 @@
 <%= render 'form' %>
 
 <% if @offers.any? %>
-  <%= render partial: 'offer', collection: @offers %>
+  <div class="offers">
+    <%= render partial: 'offer', collection: @offers %>
+  </div>
 <% else %>
   <div class="no_offers">
     No offers
