--- a/app/assets/stylesheets/offers.css.scss
+++ b/app/assets/stylesheets/offers.css.scss
@@ -1,3 +1,71 @@
 // Place all the styles related to the offers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import "bootstrap";
+
+.alert-notice {
+  @extend .alert-info;
+}
+
+.alert-alert {
+  @extend .alert-warning;
+}
+
+.wrap {
+  @extend .container;
+  color: #333;
+  padding: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px $gray-lighter solid;
+  border-radius: $border-radius-base;
+
+  h1 {
+    border-bottom: 1px $gray-lighter solid;
+    margin: -15px -15px 10px;
+    padding: 20px 15px 10px;
+    background: #f5f5f5;
+    color: #999;
+  }
+}
+
+form {
+  padding: 20px 0;
+  text-align: center;
+}
+
+.offers {
+  @extend .container-fluid;
+  border: 1px $gray-lighter solid;
+  border-radius: $border-radius-base;
+}
+
+.headers {
+  color: #555;
+  background: #f7f7f7;
+  font-weight: bold;
+  padding: 15px 0;
+}
+
+.offer {
+  @extend .row;
+  border-bottom: 1px $gray-lighter solid;
+
+  > div {
+    @extend .col-sm-4;
+  }
+
+  .title, .payout {
+    padding-top: 10px;
+  }
+
+  .thumbnail {
+    border: 0;
+    margin-bottom: 0;
+
+    img {
+      margin-left: 0;
+    }
+  }
+}
