--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag do %>
+<%= form_tag root_path, role: 'form' do %>
   <%= label_tag :uid %>
   <%= text_field_tag :uid, params[:uid] %>
 
